--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,3 @@
 cmake_minimum_required(VERSION 3.9)
 project(denoise)
-
-set(CMAKE_CXX_STANDARD 11)
-add_executable(denoise main.c stftDenoise.c
-        kiss_fft.c kiss_fftr.c
-        )
+add_executable(denoise main.c stftDenoise.c fft.c)
