fixed math link errors

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,4 @@
 cmake_minimum_required(VERSION 3.9)
 project(denoise)
 add_executable(denoise main.c stftDenoise.c fft.c)
+target_link_libraries(denoise -lm)
