--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required(VERSION 3.9)
 project(denoise)
-add_executable(denoise main.c stftDenoise.c fft.c)
+add_executable(denoise main.c audioDenoise.c fft.c)
 target_link_libraries(denoise -lm)
